crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.5__search_order__explicit_import_local_conflict.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.import_conflict] 7:8..7:8: import of `C` from package `P` conflicts with local declaration
---
unit (0 diagnostics)
