crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.5__search_order__export_triggers_wildcard_conflict.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.import_conflict] 14:8..14:8: import of `x` from package `P` conflicts with wildcard import from package `Q`
---
unit (0 diagnostics)
