crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.5__search_order__import_precedence.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.ambiguous_import] 35:20..35:20: name `C` is ambiguous: imported from packages `P`, `Q`
---
unit (0 diagnostics)
