crates/lyra-tests/tests/snapshots/corpus__lrm__26__26.5__search_order__wildcard_explicit_conflict.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.import_conflict] 10:8..10:8: import of `C` from package `P` conflicts with wildcard import from package `Q`
---
unit (0 diagnostics)
